--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
       <div class="header-list">
         <ul>
           <li>
-            <a href="../aboutus.html">About us</a>
+            <a href="./aboutus.html">About us</a>
           </li>
           <li>
-            <a href="../activity.html">Activity</a>
+            <a href="./activity.html">Activity</a>
           </li>
           <li>
-            <a href="../photos.html">Photos</a>
+            <a href="./photos.html">Photos</a>
           </li>
           <li>
-            <a href="../index.html">Home</a>
+            <a href="./index.html">Home</a>
           </li>
         </ul>
       </div>
@@ -43,7 +43,7 @@
               <summary>Details</summary>
               <p>11/26~11/28に佐保会館にて墨攻展を開催しました。</p>
               <p>大仏書道展に出展した作品も飾られていました！</p>
-              <a href="../photos.html#bokkoten2022">墨攻展の様子</a>
+              <a href="./photos.html#bokkoten2022">墨攻展の様子</a>
             </details>
           </li>
           <li class="item">
@@ -54,7 +54,7 @@
               <p>ついに本番です！</p>
               <p>これまでの練習の成果を出し切りました。</p>
               <p>たくさんの拍手をありがとうございました！</p>
-              <a href="../photos.html#performance2022">恋都祭書道パフォーマンスの様子</a>
+              <a href="./photos.html#performance2022">恋都祭書道パフォーマンスの様子</a>
             </details>
           </li>
           <li class="item">
@@ -64,7 +64,7 @@
                 <summary>Details</summary>
                 <p>この1ヶ月間、恋都祭に向けて書道パフォーマンスの練習をしました。</p>
                 <p>11/3の本番に向けて夜遅くまで練習を重ねました。</p>
-                <a href="../photos.html#performancerenshu2022">パフォーマンス練習の様子</a>
+                <a href="./photos.html#performancerenshu2022">パフォーマンス練習の様子</a>
               </details>
           </li>
           <li class="item">
@@ -74,7 +74,7 @@
                 <summary>Details</summary>
                 <p>9/2~9/4に吉野の竹林院さんにて合宿を行いました。</p>
                 <p>３日間、各々が墨攻展に向けた作品作りに励みました。</p>
-                <a href="../photos.html#camp2022">夏合宿の様子</a>
+                <a href="./photos.html#camp2022">夏合宿の様子</a>
               </details>
           </li>
           <li class="item">
@@ -84,7 +84,7 @@
               <summary>Details</summary>
               <p>5/2~6/6に旧鍋屋交番にてMay展を行いました。</p>
               <p>新入生も作品作りに参加してくれました！</p>
-              <a href="../photos.html#may2022">May展の様子</a>
+              <a href="./photos.html#may2022">May展の様子</a>
             </details>
         </li>
         </ul>
